--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,14 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.2.1</version>
+            <configuration>
+                <mainClass>io.agora.rtt.Main</mainClass>
+            </configuration>
+        </plugin>        
       </plugins>
     </pluginManagement>
   </build>
